// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Event > crossSerialize > scoped > supports Event 1`] = `"($R=>$R[0]=new Event("example",$R[1]={bubbles:!1,cancelable:!1,composed:!1}))($R["example"])"`;

exports[`Event > crossSerialize > supports Event 1`] = `"$R[0]=new Event("example",$R[1]={bubbles:!1,cancelable:!1,composed:!1})"`;

exports[`Event > crossSerializeAsync > scoped > supports Event 1`] = `"($R=>$R[0]=Promise.resolve($R[1]=new Event("example",$R[2]={bubbles:!1,cancelable:!1,composed:!1})))($R["example"])"`;

exports[`Event > crossSerializeAsync > supports Event 1`] = `"$R[0]=Promise.resolve($R[1]=new Event("example",$R[2]={bubbles:!1,cancelable:!1,composed:!1}))"`;

exports[`Event > crossSerializeStream > scoped > supports Event 1`] = `
"($R=>$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p)($R["example"])"
`;

exports[`Event > crossSerializeStream > scoped > supports Event 2`] = `
"($R=>($R[5]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=new Event("example",$R[4]={bubbles:!1,cancelable:!1,composed:!1})))($R["example"])"
`;

exports[`Event > crossSerializeStream > supports Event 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`Event > crossSerializeStream > supports Event 2`] = `
"($R[5]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=new Event("example",$R[4]={bubbles:!1,cancelable:!1,composed:!1}))"
`;

exports[`Event > serialize > supports Event 1`] = `"new Event("example",{bubbles:!1,cancelable:!1,composed:!1})"`;

exports[`Event > serializeAsync > supports Event 1`] = `"Promise.resolve(new Event("example",{bubbles:!1,cancelable:!1,composed:!1}))"`;

exports[`Event > toCrossJSON > supports Event 1`] = `"{"t":25,"i":0,"s":{"type":{"t":1,"s":"example"},"options":{"t":10,"i":1,"p":{"k":["bubbles","cancelable","composed"],"v":[{"t":2,"s":3},{"t":2,"s":3},{"t":2,"s":3}]},"o":0}},"c":"seroval-plugins/web/Event"}"`;

exports[`Event > toCrossJSONAsync > supports Event 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":25,"i":1,"s":{"type":{"t":1,"s":"example"},"options":{"t":10,"i":2,"p":{"k":["bubbles","cancelable","composed"],"v":[{"t":2,"s":3},{"t":2,"s":3},{"t":2,"s":3}]},"o":0}},"c":"seroval-plugins/web/Event"}}"`;

exports[`Event > toCrossJSONStream > supports Event 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`Event > toCrossJSONStream > supports Event 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":5,"s":2},{"t":25,"i":3,"s":{"type":{"t":1,"s":"example"},"options":{"t":10,"i":4,"p":{"k":["bubbles","cancelable","composed"],"v":[{"t":2,"s":3},{"t":2,"s":3},{"t":2,"s":3}]},"o":0}},"c":"seroval-plugins/web/Event"}]}"`;

exports[`Event > toJSON > supports Event 1`] = `"{"t":{"t":25,"i":0,"s":{"type":{"t":1,"s":"example"},"options":{"t":10,"i":1,"p":{"k":["bubbles","cancelable","composed"],"v":[{"t":2,"s":3},{"t":2,"s":3},{"t":2,"s":3}]},"o":0}},"c":"seroval-plugins/web/Event"},"f":63,"m":[]}"`;

exports[`Event > toJSONAsync > supports Event 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":25,"i":1,"s":{"type":{"t":1,"s":"example"},"options":{"t":10,"i":2,"p":{"k":["bubbles","cancelable","composed"],"v":[{"t":2,"s":3},{"t":2,"s":3},{"t":2,"s":3}]},"o":0}},"c":"seroval-plugins/web/Event"}},"f":63,"m":[]}"`;
